05-mongodb-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-od
  namespace: YOUR_NAMESPACE
  labels:
    run: mongodb-od
    type: database
    abcdesktop/role: mongodb
spec:
  selector:
    matchLabels:
      run: mongodb-od
  replicas: 1
  template:
    metadata:
      labels:
        run: mongodb-od
        type: database
    spec:
      containers:
        - name: mongodb
          image: mongo:4.4
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 1000m
              memory: 1024Mi
            requests:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: abcdesktop
              mountPath: /etc/abcdesktop
              readOnly: true
            - name: mongodb-scripts
              mountPath: /docker-entrypoint-initdb.d
              readOnly: true
      volumes:
        - name: abcdesktop
          secret:
            secretName: secret-mongodb
            items:
              - key: MONGO_ROOT_USERNAME
                path: admin/MONGO_ROOT_USERNAME
                mode: 0444
              - key: MONGO_ROOT_PASSWORD
                path: admin/MONGO_ROOT_PASSWORD
                mode: 0444
              - key: MONGO_USERNAME
                path: MONGO_USERNAME
                mode: 0444
              - key: MONGO_PASSWORD
                path: MONGO_PASSWORD
                mode: 0444
              - key: MONGO_USERS_LIST
                path: MONGO_USERS_LIST
                mode: 0444
              - key: MONGO_DBS_LIST
                path: MONGO_DBS_LIST
                mode: 0444
        - name: mongodb-scripts
          configMap:
            name: configmap-mongodb-scripts
            items:
              - key: ensure-users.js
                path: ensure-users.js
      tolerations:
        - key: "denbi"
          operator: "Equal"
          value: "true"
          effect: "NoSchedule"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - ops-k1n16g.embl.de
                      - ops-k1n17g.embl.de
