07-nginx-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: YOUR_NAMESPACE
  name: nginx-od
  labels:
    abcdesktop/role: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      name: nginx-od
  template:
    metadata:
      namespace: YOUR_NAMESPACE
      labels:
        name: nginx-od
        run: nginx-od
        type: frontend
        netpol/speedtest: "true"
        netpol/memcached: "true"
        netpol/pyos: "true"
        netpol/ocuser: "true"
        netpol/dns: "true"
    spec:
      containers:
        - name: nginx
          imagePullPolicy: Always
          image: registry.git.embl.de/grp-cbbcs/abcdesktop-apps/oc.nginx.external:latest
          volumeMounts:
            - name: jwtsigningkeys
              mountPath: "/config.signing"
              readOnly: true
            - name: jwtpayloadkeys
              mountPath: "/config.payload"
              readOnly: true
            - name: default-config
              mountPath: /etc/nginx/sites-enabled/default
              subPath: default
              readOnly: true
          ports:
            - containerPort: 80
              name: http
            - containerPort: 443
              name: https
          livenessProbe:
            httpGet:
              path: /
              port: 80
            failureThreshold: 1
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /
              port: 80
            failureThreshold: 5
            periodSeconds: 10
          resources:
            limits:
              cpu: 2000m
              memory: 1024Mi
            requests:
              cpu: 250m
              memory: 64Mi
      volumes:
        - name: jwtsigningkeys
          secret:
            secretName: abcdesktopjwtdesktopsigning
        - name: jwtpayloadkeys
          secret:
            secretName: abcdesktopjwtdesktoppayload
        - name: default-config
          configMap:
            name: nginx-config
      dnsPolicy: ClusterFirst
      # Modify according to your own cluster, you may or may not need tolerations and affinity.
      tolerations:
        - key: "denbi" #replace with you own
          operator: "Equal"
          value: "true"
          effect: "NoSchedule"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - node1.embl.de # replace with your own value
                      - node2.embl.de # replace with your own value
