gpu-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: gpu-operator-test
  namespace: abcdesktop-ns
spec:
  restartPolicy: OnFailure
  containers:
    - name: cuda-vector-add
      image: "nvidia/samples:vectoradd-cuda10.2"
      imagePullPolicy: Always
      resources:
        limits:
          nvidia.com/gpu: 1
          cpu: 1000,
          memory: 1024Mi
        requests:
          cpu: 500m
          memory: 128Mi
          nvidia.com/gpu: 1
  tolerations:
    - effect: NoSchedule
      key: gpupod
      operator: Equal
      value: "true"
